# minimark

./: README.md  main.hs  minimark.cabal  package.yaml  stack.yaml
Text/: Minimark.hs
