cabal-version: 2.2

name:           minimark
version:        0.7.1
synopsis:       Simple mark-up for HTML.
category:       Web
author:         Galen Huntington <galen.huntington@gmail.com>
maintainer:     Galen Huntington <galen.huntington@gmail.com>
license:        MIT
build-type:     Simple

common shared
  hs-source-dirs: .
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    NoImplicitPrelude
    OverloadedStrings
  build-depends:
   , base
   , base-prelude
   , bytestring
   , containers
   , data-default
   , megaparsec
   , mtl
   , text
   , xmlhtml

library
  import: shared
  exposed-modules:
    Text.Minimark

executable minimark
  import: shared
  main-is: main.hs
  other-modules:
    Text.Minimark

